Prevent visual shift of hamburger button and navbar content on page load

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@ div#__next > div {
     width: 100%;
 }
 
+html {
+    --navbar-opacity: 0;
+}
+
 *, *:before, *:after {
     box-sizing: border-box;
 }
